Fix: table scrollbar

--- a/src/styles/Leaderboard/PlayerData.module.scss
+++ b/src/styles/Leaderboard/PlayerData.module.scss
@@ -1,12 +1,18 @@
-.container > div {
-    display: grid;
-    grid-template-columns: 0.5fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    align-items: center;
-    justify-content: space-between;
-    gap: 0.5rem;
+.container {
+    height: 24.5rem;
 
-    padding: 1.2rem 0;
-    border-bottom: 2px solid var(--light-color);
+    overflow: auto;
+
+    > div {
+        display: grid;
+        grid-template-columns: 0.5fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+        align-items: center;
+        justify-content: space-between;
+        gap: 0.5rem;
+
+        padding: 1.2rem 0;
+        border-bottom: 2px solid var(--light-color);
+    }
 }
 
 .username {
