--- a/src/styles/Players/Players.module.scss
+++ b/src/styles/Players/Players.module.scss
@@ -1,12 +1,6 @@
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-    gap: 0.6rem;
+     width: 100vw;
 
-    width: 100vw;
-
-    margin-top: 3rem;
     padding: 0 6rem;
     text-align: center;
 
