--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,7 @@ body,
 html {
     background: var(--dark-color);
     color: var(--text);
+    max-height: 100vh;
     
     overflow-x: hidden;
 
